--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -1,9 +1,16 @@
 .content{
 
 }
-.content .product-card {
+.product-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    // background-color: #ffffff;
+    padding: 10px;
+}
+
+.product-card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
+    width: 300px;
     margin: auto;
     text-align: center;
     font-family: arial;
