--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,11 +1,16 @@
-<div class="content">
+<div class="product-container">
+
+    @for (product of products; track $index) {
     <div class="product-card">
         <img src={{product.imgPath}} alt="Denim Jeans" style="width:100%">
         <h1>{{product.name}}</h1>
-        <p class="price">{{product.price}}</p>
+        <p class="price">$ {{product.price}}</p>
         <p>{{product.description}}
         </p>
         <button>Buy</button>
         <button>Buy All</button>
+        <button (click)="removeProduct(product.id)">Delete</button>
     </div>
+    }
+
 </div>
